--- a/_config.yml
+++ b/_config.yml
@@ -43,12 +43,12 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/sadia-sigma-lab"
+  # github           : "https://github.com/sadia-sigma-lab"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  # bluesky          : "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : https://www.linkedin.com/in/sadia-asif-660302186/ # Username
+  # linkedin         : https://www.linkedin.com/in/sadia-asif-660302186/ # Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
