--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Sadia Asif Homepage"
+title                    : "Sadia Asif's Website"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Sadia Asif"
 description              : &description "personal description"
 url                      : https://sadia-sigma-lab.github.io/sadia-asif.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
