--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Sadia Asif's Website"
 title_separator          : "-"
 name                     : &name "Sadia Asif"
 description              : &description "personal description"
-url                      : https://sadia-sigma-lab.github.io/sadia-asif.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://sadia-sigma-lab.github.io/sadia-asif.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "sadia-sigma-lab/sadia-asif.github.io"
 
