--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Sadia Asif"
   pronouns         : # example: "she/her"  
-  bio              : "Phd Student"
+  bio              : "PhD Student"
   location         : "New York United States"
   employer         : "Rensselaer Polytechnic Institute"
   uri              : # URL
