--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/sadia-sigma-lab"
+  github           : "sadia-sigma-lab"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : https://www.linkedin.com/in/sadia-asif-660302186/ # Username
+  linkedin         : sadia-asif-660302186/ # Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
