--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "Sadia Asif's Website"
 title_separator          : "-"
 name                     : &name "Sadia Asif"
 description              : &description "personal description"
-url                      : https://sadia-sigma-lab.github.io/sadia-asif.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://sadia-sigma-lab.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "sadia-sigma-lab/sadia-asif.github.io"
+repository               : "sadia-sigma-lab/sadia-sigma-lab.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
